--- a/src/Pages/Schedule/style.css
+++ b/src/Pages/Schedule/style.css
@@ -1,13 +1,13 @@
 .dateContainer input {
-  color: #EEE61D;
+  color: #fff;
   background: rgb(88 88 88);
   border-radius: 10px;
   text-align: center;
   border: none;
-  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
+  outline: none;
 }
 
 .date-picker-shedule:focus {
@@ -23,7 +23,23 @@
 }
 
 .shiftsAdd h2 {
-  color: white;
+  color: black;
+}
+
+.create_schedule_button {
+  background-color: #605bff;
+  border: none;
+  outline: none;
+  padding: 8px 16px;
+  display: inline-block;
+  width: 20%;
+  color: #fff;
+  border-radius: 6px;
+  margin-top: 16px;
+}
+
+.create_schedule_container {
+  width: 20%;
 }
 
 button {
@@ -31,30 +47,27 @@ button {
 }
 
 .firstline {
-  font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
   font-size: 17.9443px;
-  line-height: 34px;
   margin: 0;
 }
 
 #content_number {
-  font-size: 38px;
-  margin-top: 1rem;
   font-weight: 500;
-  width: 90%;
+  width: 100%;
   cursor: pointer;
+  text-align: left;
 }
 
-#content_number:hover{
+/* #content_number:hover {
   border-radius: 10px;
   padding-left: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
   border: none;
   background: #fcd9c7;
-}
+} */
 
 #content_shift {
   font-weight: 500;
@@ -99,9 +112,8 @@ button.employeelist {
   background: blanchedalmond;
 }
 
-
 .content_para button {
-  border: 0
+  border: 0;
 }
 
 .employezone {
@@ -126,9 +138,9 @@ button.employeelist {
 }
 
 .clickhere {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 .upper-lower {
@@ -137,19 +149,17 @@ button.employeelist {
 }
 
 .dropbtn {
-  background-color: #ffc107;
+  background-color: #605bff;
   color: white;
-  padding: 8px 16px;
-  font-family: "Raleway";
   font-weight: 600;
-  font-size: 20px;
+  font-size: 12px;
   border: none;
   cursor: pointer;
-  margin-top: 24px;
-  width: 17rem;
-  height: 3rem;
-  border-radius: 10px;
-  border: 2px solid black;
+  width: 100%;
+  height: 1.5rem;
+  border-radius: 6px;
+  padding: 4px 8px;
+  margin-top: 4px;
 }
 
 .dropdown {
@@ -160,15 +170,14 @@ button.employeelist {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #1e1e1e;
+  background-color: #d0ddf6;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 8px;
 }
 
 .dropdown-content p {
-  color: #ffc107;
-  font-family: "Raleway";
   font-weight: 500;
   line-height: 20px;
   text-decoration: none;
@@ -176,16 +185,6 @@ button.employeelist {
   margin: 0;
   cursor: pointer;
   font-size: 14px;
-}
-
-.dropdown-content p:hover {
-  background-color: #f1f1f1;
-}
-
-
-
-.dropdown:hover .dropbtn {
-  background-color: #ffc107;
 }
 
 .dropdown:hover .dropdown-content {
@@ -201,10 +200,10 @@ button.employeelist {
   justify-content: center;
   align-items: center;
   width: 100%;
-  border: 1px solid black;
-  background: cadetblue;
+  background: #00a559;
   border-radius: 5px;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .employedetails {
@@ -212,18 +211,13 @@ button.employeelist {
   align-items: center;
   padding: 10px;
   width: 17rem;
-  border: 1px solid yellow;
+  border-bottom: 0.3px solid #fff;
   height: 70px;
   justify-content: space-between;
-
-}
-
-span:hover {
-  background-color: #ffc107;
 }
 
 .slots {
-  margin: 20px 0 20px 0;
+  /* margin: 20px 0 20px 0; */
 }
 
 .slots button {
@@ -232,55 +226,71 @@ span:hover {
 }
 
 #shift {
-  background-color: #FFEFE7;
+  background-color: #605bff;
   border-radius: 5px;
-  width: 126px;
-  height: 40px;
-  font-family: 'Raleway';
+  width: 100%;
+  color: #fff;
+  padding: 2px 4px;
   font-style: normal;
   font-weight: 700;
   text-align: center;
+  border: none;
+  outline: none;
+  margin-top: 2px;
 }
 
 .shiftsAdd {
   display: flex;
-  margin-top: 50px;
+  margin-top: 16px;
   justify-content: space-between;
+  padding: 16px;
+  width: 100%;
 }
 
 .btn_div {
-  width: 140px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  gap: 6px;
 }
 
-#submit_btn{
-  padding: 5px;
+#submit_btn {
   width: fit-content;
+  padding: 8px;
   border-radius: 10px;
-  background-color: #FFEFE7;
-  font-family: "Raleway";
+  background-color: #605bff;
   font-weight: 600;
   line-height: 20px;
   font-size: 18px;
+  border: none;
+  outline: none;
+  color: #fff;
+  width: 90%;
 }
 #delte_btn {
+  width: 10%;
   background: transparent;
   border: none;
-  color: white;
   padding: 0;
 }
 
-
 #minusBtn {
-  font-size: 20px;
-  border: 0.5px solid;
+  font-size: 16px;
   width: 27px;
   border-radius: 26px;
 }
 
+.schedule_container {
+  display: flex;
+  gap: 16px;
+}
+
+.schedule_routes {
+  width: 80%;
+}
+
 .upper {
-  width: 90%;
+  width: 100%;
 }
 
 .lower {
@@ -291,9 +301,10 @@ span:hover {
 
 .editableDiv {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
-  margin-bottom: 20px
+  gap: 8px;
+  padding: 10px 12px;
 }
 
 .editableDiv label {
@@ -302,8 +313,8 @@ span:hover {
 
 .editableContent {
   display: flex;
-  flex-direction: column;
-  flex:1
+  align-items: center;
+  gap: 16px;
 }
 
 .editableContent {
@@ -318,22 +329,32 @@ span:hover {
 .editableContent input {
   transition: 0.3s;
   border: none;
-  background: transparent;
-  width: 80%;
+  width: 100%;
+  background: #e9e7e7;
+  border-radius: 8px;
+  padding: 4px 8px;
+  outline: 0;
 }
 
-.editableContent:hover span,
-.editableContent:hover input {
-  border-radius: 10px;
-  padding-left: 15px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border: none;
-  background: #FFEFE7;
+.schedule_box_wrapper {
+  display: none;
 }
-.details_mainContainer input{
+
+.schedule_address:hover .schedule_box_wrapper {
+  display: block;
+  width: 80%;
+  z-index: 99;
+  height: 75px;
+}
+
+.schedule_box_wrapper {
+  position: absolute;
+  display: none;
+  right: 0;
+}
+
+.details_mainContainer input {
   transition: 0.3s;
   border: none;
   background: transparent;
 }
-
