--- a/src/Components/Header/styles.css
+++ b/src/Components/Header/styles.css
@@ -1,11 +1,10 @@
 nav {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
-  padding-right: 10px;
-  background-color: #1e1e1e;
-  height: 75px;
+
+  background-color: #fafafb;
+
+  height: 60px;
   width: 100%;
 }
 
@@ -18,11 +17,10 @@ nav {
 
 #navbar li {
   list-style: none;
-  padding: 0 20px;
+  padding: 0 18px;
   position: relative;
   color: #000000;
   font-size: 16px;
-  cursor: pointer;
 }
 
 #navbar li a {
@@ -75,9 +73,10 @@ nav {
 }
 
 .user-info {
-  background: #f7bc07;
+  background: #605bff;
   width: 30px;
-  border-radius: 50%;
+  color: #fff;
+  border-radius: 25%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,6 +91,37 @@ nav {
 
 .logo-container img {
   width: 170px;
+}
+.sidebar_user_details {
+  color: #000;
+}
+.sidebar_user_details p {
+  margin-bottom: 0;
+}
+.sidebar_profile_section {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 8px;
+  padding: 8px;
+  border-radius: 12px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+}
+
+.sidebar_profile_section p:nth-child(2) {
+  font-size: 10px;
+  text-transform: capitalize;
+}
+
+.sidebar_profile_section p:nth-child(1) {
+  text-transform: capitalize;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.sidebar_profile_section ul {
+  padding: 0;
 }
 
 @media screen and (max-width: 767px) {
