--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -1,7 +1,7 @@
-.Main_homeContainer{
-    height: 100vh;
-    width: 100%;
-    margin:0;
-    padding: 0;
-    background-color: #1E1E1E;
+.Main_homeContainer {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #fafafb;
+  padding: 8px;
 }
